--- a/style.css
+++ b/style.css
@@ -4,18 +4,26 @@
  
 }
 body{
-    background-color: rgb(223, 223, 223);
+    background: rgb(11,118,5);
+    background: linear-gradient(90deg, rgba(11,118,5,1) 0%, rgba(237,255,0,1) 33%, rgba(255,253,1,1) 58%, rgba(0,27,255,1) 100%);
+    
 }
 header{
     display: block;
     width: 100%;
-    height: 25vh;
+    height: 20vh;
     background-color: white;
 }
 #logo{
-    size: 20px;
+    width: 25vh;
+    float: left;
+    z-index: 1;
+    margin-top: 2vh;
 }
 #cadastro{
     width: 500px;
     margin-top: 10vh;
+    height: 90vh;
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 20px;
 }
