--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
  
 }
 body{
-    background: rgb(11,118,5);
-    background: linear-gradient(90deg, rgba(11,118,5,1) 0%, rgba(237,255,0,1) 33%, rgba(255,253,1,1) 58%, rgba(0,27,255,1) 100%);
+    background: rgb(16,45,147);
+background: linear-gradient(90deg, rgba(16,45,147,1) 58%, rgba(0,27,255,1) 100%);
     
 }
 header{
