--- a/style.css
+++ b/style.css
@@ -3,27 +3,33 @@
     padding: 0;
  
 }
-body{
+    body{
     background: rgb(16,45,147);
-background: linear-gradient(90deg, rgba(16,45,147,1) 58%, rgba(0,27,255,1) 100%);
+   
     
 }
-header{
+    header{
     display: block;
     width: 100%;
     height: 20vh;
     background-color: white;
 }
-#logo{
+    #logo{
     width: 25vh;
     float: left;
     z-index: 1;
     margin-top: 2vh;
 }
-#cadastro{
+    #cadastro{
     width: 500px;
     margin-top: 10vh;
     height: 90vh;
     background-color: rgba(255, 255, 255, 1);
     border-radius: 20px;
-}
+    margin-right:10vh ;
+    }
+    #tabela{
+        background-color: aliceblue;
+        margin-top: 10vh;
+        
+    }
